--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDObligaciones.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplRSDObligaciones.cshtml
@@ -17,16 +17,35 @@
                     No se logró evidenciar señalización de los Vértices xx, conforme se comprometió la titular en el numeral xxx de su Plan de Manejo
                 </td>
                 <td style="border: 1px solid #000;">
-                    Literal t) del numeral 43.1 del artículo 43 del Reglamento para la Gestión Forestal, aprobado mediante Decreto Supremo N° 018-2015-MINAGRI (en adelante, RGF). y los lineamientos aprobados mediante Resolución de Dirección Ejecutiva N° XX
+                    Literal t) del numeral 43.1 del artículo 43
+                    <a style="mso-footnote-id: foot_concesiones_1" href="#_foot_concesiones_1" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    del Reglamento para la Gestión Forestal, aprobado mediante Decreto Supremo N° 018-2015-MINAGRI (en adelante, RGF).
+                    y los lineamientos aprobados mediante Resolución de Dirección Ejecutiva N° XX
+                    <a style="mso-footnote-id: foot_concesiones_2" href="#_foot_concesiones_2" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Sí/Establecer los linderos, hitos u otras señales
+                    <a style="mso-footnote-id: foot_concesiones_3" href="#_foot_concesiones_3" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
             </tr>
         </tbody>
     </table>
     <p class="enumeration">
-        Como puede apreciarse, la supervisión evidenció que la/el titular incumplió la señalización de los vértices de su plan de manejo, omisión que no subsanó a pesar que se le indicó que ello era posible, conforme a lo establecido en el numeral 6.3 del artículo 6 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI (en adelante, el RISMFFS). Por ello, corresponde imputar a la titular la comisión de la infracción referida señalada en el numeral 1 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        Como puede apreciarse, la supervisión evidenció que la/el titular incumplió la señalización de los vértices de su plan de manejo, omisión que no subsanó a pesar que se le indicó que ello era posible
+        <a style="mso-footnote-id: foot_concesiones_4" href="#_foot_concesiones_4" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>, conforme a lo establecido en el numeral 6.3 del artículo 6 del Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI (en adelante, el RISMFFS). Por ello, corresponde imputar a la titular la comisión de la infracción referida señalada en el
+        numeral 1
+        <a style="mso-footnote-id: foot_concesiones_5" href="#_foot_concesiones_5" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -82,7 +101,12 @@
         </thead>
         <tbody>
             <tr>
-                <td style="border: 1px solid #000;" rowspan="2">Plan de Manejo N° XX, correspondiente al periodo XX</td>
+                <td style="border: 1px solid #000;" rowspan="2">
+                    Plan de Manejo N° XX, correspondiente al periodo XX
+                    <a style="mso-footnote-id: foot_concesiones_6" href="#_foot_concesiones_6" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                </td>
                 <td style="border: 1px solid #000;" rowspan="2">Informe de Ejecución Anual</td>
                 <td style="border: 1px solid #000;">No maderable</td>
                 <td style="border: 1px solid #000;">XX</td>
@@ -192,10 +216,16 @@
                     Tener y mantener actualizado el libro de operaciones de acuerdo a los lineamientos aprobados por el SERFOR.
                 </td>
                 <td style="border: 1px solid #000;">
-                    La/el titular no mantiene actualizado el libro de operaciones, de acuerdo a los lineamientos aprobados por el SERFOR.
+                    La/el titular no mantiene actualizado el libro de operaciones, de acuerdo a los lineamientos aprobados por el SERFOR
+                    <a style="mso-footnote-id: foot_concesiones_7" href="#_foot_concesiones_7" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>.
                 </td>
                 <td style="border: 1px solid #000;">
-                    Literal d) del numeral 43.1 del artículo 43 del RGF
+                    Literal d) del numeral 43.1 del artículo 43 del RGF                    
+                    <a style="mso-footnote-id: foot_concesiones_8" href="#_foot_concesiones_8" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     Si, sólo en caso de no haber registrado la información, pero se cuente con la documentación que acredite la procedencia legal del recurso / Actualizar el libro de operaciones.
@@ -233,7 +263,10 @@
         </tbody>
     </table>
     <p class="enumeration">
-        En ese sentido, se concluye que el Libro de operaciones no se encuentra actualizado. Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, se concluye que el Libro de operaciones no se encuentra actualizado. Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 11
+        <a style="mso-footnote-id: foot_concesiones_9" href="#_foot_concesiones_9" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a> del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -257,6 +290,9 @@
                 </td>
                 <td style="border: 1px solid #000;">
                     Literal a) del numeral 43.1 del artículo 43 del RGF
+                    <a style="mso-footnote-id: foot_concesiones_10" href="#_foot_concesiones_10" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
                 </td>
                 <td style="border: 1px solid #000;">
                     No
@@ -265,7 +301,11 @@
         </tbody>
     </table>
     <p class="enumeration">
-        Del análisis de los resultados obtenidos en la supervisión, cotejada con los Balances de Extracción y Forma 20, de fecha xx de xx de 20xx (Registro N° xx), se advierte que no se justifica el volumen declarado como aprovechado, por un total de xx m3 de madera, conforme el siguiente detalle:
+        Del análisis de los resultados obtenidos en la supervisión, cotejada con los Balances de Extracción y Forma 20
+        <a style="mso-footnote-id: foot_concesiones_11" href="#_foot_concesiones_11" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        , de fecha xx de xx de 20xx (Registro N° xx), se advierte que no se justifica el volumen declarado como aprovechado, por un total de xx m3 de madera, conforme el siguiente detalle:
     </p>
     <table width="100%" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
         <thead>
@@ -328,7 +368,12 @@
         Atendiendo a lo expuesto, en tanto se declaró un volumen movilizado de balance de extracción mayor al volumen movilizado advertido en campo, se verifica que se ha declarado un excedente respecto al recurso forestal válidamente aprovechado.
     </p>
     <p class="enumeration">
-        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de xxx m3 cuyo origen se desconoce, conforme se muestra en el cuadro anterior. Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 26 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese sentido, la/el titular habría utilizado indebidamente o facilitó la guía de transporte forestal, así como la documentación otorgada o aprobada por la autoridad competente, para amparar la extracción no autorizada de un volumen de xxx m3 cuyo origen se desconoce, conforme se muestra en el cuadro anterior. 
+        Por ello, corresponde imputar a la/el titular la comisión de la infracción establecida en el numeral 26
+        <a style="mso-footnote-id: foot_concesiones_13" href="#_foot_concesiones_13" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
     </p>
 </script>
 
@@ -360,7 +405,11 @@
         </tbody>
     </table>
     <p class="enumeration">
-        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal, el cual tiene como objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.
+        El xx de xxx de 20xx, la/el titular  y el Ing. xx, suscribieron el Contrato de Regencia Forestal
+        <a style="mso-footnote-id: foot_concesiones_14" href="#_foot_concesiones_14" title="">
+            <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+        </a>
+        , el cual tiene como objeto la elaboración del expediente técnico del PO y levantamiento de observaciones formuladas por la autoridad forestal.
     </p>
     <p class="enumeration">
         Ahora bien, el Plan de Manejo, aprobado mediante la Resolución Jefatural N° xx, de fecha xx de xx de 2021, se encuentra vigente desde el desde el xx de xxx de 20xx hasta el xx de xx de 20xx. Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el xx de xx de 20xx.
