--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplFootnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAU/templates/_tmplFootnotes.cshtml
@@ -28,6 +28,186 @@
                 </p>
             </div>
         </div>
+
+        <div style="mso-element: footnote;" id="foot_vistos_3">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_vistos_3;" href="#_foot_vistos_3" name="_foot_vistos_3">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    El Procedimiento Administrativo Único o PAU es el procedimiento sancionador iniciado por las instancias correspondientes del OSINFOR, sobre la base de los resultados del Informe de Supervisión, con la finalidad de investigar y determinar la existencia de infracciones administrativas (a propósito, del incumplimiento de obligaciones legales o compromisos establecidos en los instrumentos de manejo), imponer las sanciones correspondientes y/o declarar la caducidad del título habilitante, así como el dictado de las medidas administrativas, contempladas en la normativa forestal y de fauna silvestre.
+                </p>
+            </div>
+        </div>
+
+        @*Causal de caducidad*@
+        <div style="mso-element: footnote;" id="foot_caducidad_1">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_caducidad_1;" href="#_foot_caducidad_1" name="_foot_caducidad_1">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Aprobados mediante Resolución de Jefatura Nº 009-2018-OSINFOR
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_caducidad_2">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_caducidad_2;" href="#_foot_caducidad_2" name="_foot_caducidad_2">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Según los “Criterios para estimar la gravedad del daño por la comisión de infracciones en materia forestal”, aprobado por Resolución de Jefatura N° 059-2019-OSINFOR, establece que la Gravedad del daño = Significancia del daño (sumatoria de indicadores de actividades dañosas) x Irreparabilidad.
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_caducidad_3">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_caducidad_3;" href="#_foot_caducidad_3" name="_foot_caducidad_3">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <strong>Decreto Legislativo 1220, Decreto legislativo que establece medidas para la Lucha contra la Tala Ilegal</strong>
+                    <br />
+                    <strong>“Cuarta.- Medidas para fortalecer la lucha contra la tala ilegal en sede administrativa</strong>
+                    <br />
+                    Con la finalidad de fortalecer la lucha contra la tala ilegal en sede administrativa, el SERFOR, las Autoridades Regionales Forestales y de Fauna Silvestre - ARFFS, el SERNANP o el Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre - OSINFOR, antes de iniciarse un procedimiento administrativo sancionador o en cualquier etapa del procedimiento pueden ordenar medidas cautelares previamente a la determinación de la responsabilidad de los administrados, cuando ello resulte necesario para prevenir un daño irreparable al Patrimonio Forestal de la Nación en el marco de sus competencias”.
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_caducidad_4">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_caducidad_4;" href="#_foot_caducidad_4" name="_foot_caducidad_4">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <strong>Texto Único Ordenado de la Ley N° 27444, Ley del Procedimiento Administrativo General, aprobado mediante el Decreto Supremo N° 004-2019-JUS</strong>
+                    <br />
+                    <strong>Artículo 157°.- Medidas cautelares</strong>
+                    <br />
+                    157.1 Iniciado el procedimiento, la autoridad competente mediante decisión motivada y con elementos de juicio suficientes puede adoptar, provisoriamente bajo su responsabilidad, las medidas cautelares establecidas en esta Ley u otras disposiciones jurídicas aplicables, mediante decisión fundamentada, su hubiera posibilidad de que sin su adopción se arriesga la eficacia de la resolución a emitir.
+                    <br />
+                    157.2 Las medidas cautelares podrás ser modificadas o levantadas durante el curso del procedimiento, de oficio o a instancia de parte, en virtud de circunstancias sobrevenidas o que no pudieron ser consideradas en el momento de su adopción. (…)
+                </p>
+            </div>
+        </div>
+
+        @*Resolución*@
+        <div style="mso-element: footnote;" id="foot_resolucion_1">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_1;" href="#_foot_resolucion_1" name="_foot_resolucion_1">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    “Metodología de Cálculo del Monto de las Multas a imponer por el Organismo de Supervisión de los Recursos Forestales y de Fauna Silvestre – OSINFOR, por infracciones a la Legislación Forestal y de Fauna Silvestre”, aprobada mediante Resolución Presidencial N° 021-2018-OSINFOR.
+                </p>
+            </div>
+        </div>
+
+        <div style="mso-element: footnote;" id="foot_resolucion_2">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_2;" href="#_foot_resolucion_2" name="_foot_resolucion_2">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Domicilio consignado en la adenda del contrato de concesión.
+                </p>
+            </div>
+        </div>
+        
+        <div style="mso-element: footnote;" id="foot_resolucion_3">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_3;" href="#_foot_resolucion_3" name="_foot_resolucion_3">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Es preciso indicar que, si bien la Mesa de Partes Digital se encuentra disponible de forma permanente, las 24 horas del día, los 7 días de la semana, los documentos se recibirán de lunes a viernes desde las 08:30 am hasta las 04:30 pm. Cualquier documento presentado en días no hábiles o después de las 16:30 horas, será considerado como recibido el día hábil siguiente. Sólo recibe documentos como máximo de 10 MB.
+                </p>
+            </div>
+        </div>
+        
+        <div style="mso-element: footnote;" id="foot_resolucion_4">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_4;" href="#_foot_resolucion_4" name="_foot_resolucion_4">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    La información detallada sobre las modalidades de atención en la Mesa de Partes del OSINFOR, se encuentra a su disposición en el portal web, a través del siguiente enlace: https://www.gob.pe/institucion/osinfor/campa%C3%B1as/4792-mesa-de-partes-del-osinfor.
+                </p>
+            </div>
+        </div>
+        
+        <div style="mso-element: footnote;" id="foot_resolucion_5">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_5;" href="#_foot_resolucion_5" name="_foot_resolucion_5">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Para afiliarse a la casilla electrónica podrá enviar su solicitud al correo electrónico: mesa.partes@osinfor.gob.pe, comunicarse al número (511) 615-7373 o revisar la página web del OSINFOR: www.osinfor.gob.pe.
+                </p>
+            </div>
+        </div>
+        
+        <div style="mso-element: footnote;" id="foot_resolucion_6">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_6;" href="#_foot_resolucion_6" name="_foot_resolucion_6">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    Cabe precisar que, en caso de solicitud de ampliación de plazo para presentación de descargo, la prórroga es automática hasta cinco días hábiles adicionales, conforme al artículo 19 del Reglamento del PAU.
+                </p>
+            </div>
+        </div>
+        
+        <div style="mso-element: footnote;" id="foot_resolucion_7">
+            <div class="MsoFootnoteText">
+                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
+                    <a style="mso-footnote-id: foot_resolucion_7;" href="#_foot_resolucion_7" name="_foot_resolucion_7">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <strong>Reglamento de Infracciones y Sanciones en Materia Forestal y de Fauna Silvestre, aprobado mediante Decreto Supremo N° 007-2021-MIDAGRI</strong>
+                    <br />
+                    <strong>Artículo 8. Sanción de multa</strong>
+                    <br />
+                    (…)
+                    <br />
+                    8.4 Si iniciado un procedimiento administrativo sancionador el sujeto infractor reconoce su responsabilidad administrativa de forma expresa y por escrito, la multa aplicable puede reducirse hasta:
+                    <br />
+                    a)	Un 50%, si reconoce su responsabilidad desde el inicio del procedimiento administrativo sancionador hasta la presentación de los descargos a la imputación de cargos.
+                    <br />
+                    b)	Un 25%, si reconoce su responsabilidad luego de presentados los descargos a la imputación de cargos hasta antes de la expedición de la resolución final.
+                </p>
+            </div>
+        </div>
+
+        {{if COD_MODALIDAD == "01"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Concesiones/_footnotes.cshtml")
+
+        {{else COD_MODALIDAD == "02"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Predios privados/_footnotes.cshtml")
+
+        {{else COD_MODALIDAD == "03"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Comunidades nativas/_footnotes.cshtml")
+
+        {{else COD_MODALIDAD == "04"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/ManPAU/templates/Fauna/_footnotes.cshtml")
+
+        {{/if}}
     </div>
 </script>
 
